# rrr

./: .clangd.in  .cproject  .gitignore  .gitmodules  .project  .ycm_extra_conf.py  3P5nnOqxAN  AUTHORS  LICENSE  LICENSE.library  LICENSE.modules  LICENSE.openssl  LICENSE.scripts  LICENSE.sha1  Makefile.am  Message Patterns.md  OPENSSL DISABLED  README  README.dev  README.dev.md  README.md  README.style  RELEASE_TASKS  _  check.pl  configure.ac  do_valgrind.sh  env.conf  input_data  jeprof_inspect.sh  lcov.sh  merge_all_from_master.sh  mqtt.conf  replaceall.sh  rrr.conf  rrr_objects.py  rrr_test.conf  rrr_test.pl  rrr_test.py  rrr_test2.conf  (+5 more)
misc/: .placeholder  Makefile.am  build.svg.tmpl  generate_badge.sh  log_wrapper.sh  rrr.conf
misc/archlinux/: PKGBUILD
misc/array/: hdlc01.spec  misc01.spec  misc02.spec  misc03.spec  msg01.spec  msg02.spec  tree01.spec
misc/cmodule_standalone/: .gitignore  HOWTO  Makefile.am  Makefile.am.tmpl  README  aclocal.m4  autogen.sh  cmodule.h  config.h  config.status  configure  configure.ac  dummy.c  verify_targets.sh
misc/cmodule_standalone/dummy/: extra.c
misc/confdir/: Makefile.am  rrr-dummy.conf
misc/docker/: Dockerfile
misc/docker/service/: build.sh  run.sh
misc/man/: rrr.1  rrr.conf.5  rrr_auth.1  rrr_logd.1  rrr_msg.1  rrr_passwd.1  rrr_post.1  rrr_python3.5  rrr_stats.1  rrr_sub.1
misc/mqtt/: packet-connect-valid  packet-puback-valid  packet-pubcomp-valid  packet-publish-payload-too-long  packet-publish-topic-too-long  packet-publish-valid  packet-pubrec-valid  packet-pubrel-valid  packet-subscribe-valid  packet-subscribe-with-null-character-filter  packet-unsuback-valid  packet-unsubscribe-valid
misc/openrc/: .gitignore  Makefile.am  make-service.sh.in  rrr
misc/postgresql/: test_db.sql
misc/rpm/: make_rpm.sh  rrr.spec
misc/runit/: .gitignore  Makefile.am  make-runit.sh  make-runit.sh.in  run
misc/ssl/: rrr.crt  rrr.csr  rrr.key
misc/ssl/rootca/: fb87e7a1.0  goliathdns.no.crt
misc/systemd/: .gitignore  Makefile.am  make-service.sh.in  make-tmpfiles.sh  make-tmpfiles.sh.in  rrr.conf  rrr.service
misc/test_configs/: env.conf  generate_input_data.pl  hex2bin.pl  http_push.conf  http_push.html  http_push.pl  http_push_nag.sh  http_request.txt  iot.passwd  modules  rrr.conf  rrr2.conf  rrr_alive.pl  rrr_array.conf  rrr_array.in  rrr_array_tree.conf  rrr_backstop.pl  rrr_buffers.conf  rrr_buffers.pl  rrr_cacher.conf  rrr_cacher.pl  rrr_cacher.sh  rrr_file.conf  rrr_file_drop.conf  rrr_file_drop.pl  rrr_file_serial.conf  rrr_http.conf  rrr_http2.conf  rrr_http2.pl  rrr_http2_client.pl  rrr_http2_nagging.conf  rrr_http_keepalive.conf  rrr_http_websocket.conf  rrr_http_websocket.html  rrr_http_websocket.pl  rrr_incrementer.conf  rrr_ocr.conf  rrr_ocr.html  rrr_ocr.pl  rrr_perl_iso88591.conf  (+60 more)
misc/test_configs/udev/: 99-intermec.rules
src/: Makefile.am  add.js  buffer.c  buffer.h  control.c  control.h  global.c  global.h  instances.c  instances.h  intercept.h  macro_utils.h  main.c  main.h  main_signals.h  make-paths.sh.in  measurement.h  modules.c  modules.h  output.h  paths.c  paths.h  read.c  rrr  rrr.c  rrr_artnet_node.c  rrr_auth.c  rrr_http_client.c  rrr_http_server.c  rrr_js.cxx  rrr_logd.c  rrr_lua.c  rrr_modbus_server  rrr_modbus_server.c  rrr_msg.c  rrr_msgdb.c  rrr_passwd.c  rrr_post.c  rrr_readdir.c  rrr_stats  (+7 more)
src/3rd party/voltmonitor/: README  checkvoltage  checkvoltage.arm  checkvoltage.c  checkvoltage.i386  measure-voltage.sh  plotmultivoltage.pg  plotvoltage.pg  voltmeter_sim.sh
src/blockdevlogger/: .autotools  .cproject  .gitignore  .gitmodules  .project  AUTHORS  README.md  configure.ac
src/blockdevlogger/debian/: changelog  control  copyright  libblock-device-logger-dev.install
src/blockdevlogger/src/: Makefile.am  bdl.c
src/cmodules/: Makefile.am  Makefile.am.tmpl  README  cmodule.h  dummy.c  dummy.sources  generate_am.sh
src/lib/: Array.cxx  Array.hxx  InstanceConfig.cxx  InstanceConfig.hxx  Makefile.am  allocator.c  allocator.h  array.c  array.h  array_tree.c  array_tree.h  arrayxx.cpp  arrayxx.hpp  banner.c  banner.h  base64.c  benchmark.h  btree.c  btree.h  buffer.c  buffer.h  cmodule.c  cmodule.h  cmodule_channel.c  cmodule_channel.h  cmodule_common.c  cmodule_common.h  cmodule_defer_queue.c  cmodule_defer_queue.h  cmodule_defines.h  cmodule_ext.h  cmodule_helper.c  cmodule_helper.h  cmodule_main.c  cmodule_main.h  cmodule_native.c  cmodule_native.h  cmodule_shared.h  common.c  common.h  (+251 more)
src/lib/artnet/: rrr_artnet.c  rrr_artnet.h
src/lib/cmdlineparser/: .cproject  .gitignore  README.md  (+3 more)
src/modules/: .Tpo  .p_httpclient.c.swp  IP transfer with local block device backup protocol description.txt  Makefile.am  d_mqttbroker.c  d_msgdb.c  d_raw.c  d_udpsender.c  dst_stdout.c  dst_stdout.h  dummy.la  http_common.h  p_artnet.c  p_averager.c  p_blockdev.c  p_buffer.c  p_cacher.c  p_cmodule.c  p_controller.c  p_duplicator.c  p_exploder.c  p_file.c  p_httpclient.c  p_httpserver.c  p_incrementer.c  p_influxdb.c  p_ip.c  p_ipclient.c  p_ipserver.c  p_js.cxx  p_junction.c  p_lua.c  p_mangler.c  p_modbus.c  p_mqttbroker.c  p_mqttclient.c  p_mysql.c  p_ocr.c  p_ocr.cpp  p_perl5.c  (+17 more)
src/perl5/: .gitignore  Makefile.PL.in  Makefile.am
src/python/: Makefile.am  rrr.py
src/tests/: .gitignore  Makefile.am  configuration.c  isolated_python.c  main  main.c  make_test_data.c  mqttbroker.acl  rrr.passwd  rrr_test  rrr_test.c  send_fifo  send_fifo.c  send_ip.c  test.c  test.conf  test.h  test.js  test.lua  test.pl  test.sh  test.sh.in  test_a.mjs  test_allocator.c  test_allocator.h  test_artnet.c  test_artnet.conf  test_artnet.h  test_artnet.pl  test_artnet.sh  test_averager.conf  test_averager.sh  test_b.mjs  test_c.mjs  test_cacher.sh  test_cacher_1.conf  test_cacher_2.conf  test_cacher_3.conf  test_cacher_3.pl  test_cacher_4.conf  (+153 more)
tools/: .gitignore  Makefile.am  afl.sh  array_parse  array_parse.c  data  generate_udpdata.c  merge_all_from_master.sh  merge_from_development.sh  mqtt_assemble.c  mqtt_fuzz.sh  mqtt_makepackets.sh  mqtt_parse  mqtt_parse.c  msg_make  msg_make.c  trace.pl
(+600 files in other folders)
